# moodle-to-vikwikiquiz

./: .gitattributes  .gitignore  README.md  grading_types.py  main.py  makefile  pyproject.toml  question.py  quiz.py  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  bug_report.md  bug_report.yaml  bug_report.yml  feature_request.yaml  feature_request.yml
.github/workflows/: black.yml  main.yml  publish_to_pypi.yml  release.yaml  release.yml
Formula/: moodle-to-vikwikiquiz.rb  moodle_to_vikwikiquiz.rb
src/: main.py  question.py  quiz.py  quiz_helpers.py
src/moodle_to_vikwikiquiz/: illustrations.py  main.py  question.py  quiz.py  quiz_helpers.py
src/moodle_to_vikwikiquiz/quiz/: illustration.py  quiz.py  quiz_element.py  quiz_helpers.py
src/moodle_to_vikwikiquiz/quiz/illustrations/: illustration.py  state_of_illustrations.py
src/moodle_to_vikwikiquiz/quiz/questions/: answer.py  question.py  question_types.py
